[gd_scene load_steps=22 format=4 uid="uid://b7f004nv15578"]

[ext_resource type="Script" uid="uid://b16nyes5bwtvj" path="res://Scripts/Shop.gd" id="1_2shtd"]
[ext_resource type="TileSet" uid="uid://b3gopr6v61ile" path="res://Assets/tilemap_layer.tres" id="2_k6jq0"]
[ext_resource type="PackedScene" uid="uid://otie2iwdcy3l" path="res://Scenes/change_station.tscn" id="3_io27d"]
[ext_resource type="PackedScene" uid="uid://cab34l7km8211" path="res://Scenes/world_tile.tscn" id="3_s8dlv"]
[ext_resource type="PackedScene" uid="uid://cdriqklv02x0c" path="res://Scenes/item.tscn" id="4_fdj0q"]
[ext_resource type="Texture2D" uid="uid://kgya67vh7gr3" path="res://Assets/FreeCityBuilder/FreeAssets/Tile_paredroja_ventanal.png" id="4_tyrku"]
[ext_resource type="Texture2D" uid="uid://dilo6kvnsj3wr" path="res://Assets/FreeCityBuilder/FreeAssets/Tile_paredroja.png" id="5_5xp22"]
[ext_resource type="Texture2D" uid="uid://dqy0vclc8iqho" path="res://Assets/FreeCityBuilder/FreeAssets/Tile_puerta_shop.png" id="5_tyrku"]
[ext_resource type="Texture2D" uid="uid://cqyk08ruebbat" path="res://Assets/FreeCityBuilder/FreeAssets/Tile_freezer.png" id="6_0vsm1"]
[ext_resource type="Texture2D" uid="uid://q642bk8t2dmt" path="res://Assets/FreeCityBuilder/FreeAssets/Tile_cash_register.png" id="7_3568l"]
[ext_resource type="Texture2D" uid="uid://dtahg5naw84la" path="res://Assets/FreeCityBuilder/FreeAssets/Tile_shop1.png" id="8_mjtuy"]
[ext_resource type="Texture2D" uid="uid://31wdvqgtyoiq" path="res://Assets/FreeCityBuilder/FreeAssets/Plant.png" id="9_cuuv1"]
[ext_resource type="Texture2D" uid="uid://ciugmnhbbo2v7" path="res://Assets/FreeCityBuilder/FreeAssets/Decor_TableSet.png" id="10_yl1pv"]
[ext_resource type="Texture2D" uid="uid://0svsu3pewgtm" path="res://Assets/FreeCityBuilder/FreeAssets/Tile_shop3.png" id="11_mjtuy"]
[ext_resource type="Texture2D" uid="uid://gbvuh4svhtys" path="res://Assets/FreeCityBuilder/FreeAssets/Tile_shop2.png" id="12_cuuv1"]
[ext_resource type="Texture2D" uid="uid://b835q1mr1n03e" path="res://Assets/FreeCityBuilder/FreeAssets/Npc.png" id="13_cuuv1"]
[ext_resource type="Texture2D" uid="uid://dpga6nn3b8erf" path="res://Assets/FreeCityBuilder/FreeAssets/Tile_cookies.png" id="14_m13ki"]
[ext_resource type="PackedScene" uid="uid://41col1ggcja7" path="res://Scenes/character.tscn" id="18_cuuv1"]
[ext_resource type="PackedScene" uid="uid://ckgy6i05r28bi" path="res://Scenes/mensajeloop.tscn" id="19_yl1pv"]

[sub_resource type="Curve2D" id="Curve2D_2shtd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 266, 365, 0, 0, 0, 0, 447, 262, 0, 0, 0, 0, 785, 454, 0, 0, 0, 0, 960, 351, 0, 0, 0, 0, 832, 279)
}
point_count = 5

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_fdj0q"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_2shtd")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(28.8781, 16.3677)
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-31, -128)
scale = Vector2(0.2, 0.2)
tile_map_data = PackedByteArray("AAAJAAUABgAAAAAAAAAJAAQABgAAAAAAAAAJAAMABgAAAAAAAAAJAAIABgAAAAAAAAAJAAEABgAAAAAAAAAJAAAABgAAAAAAAAAKAAAABgAAAAAAAAALAAAABgAAAAAAAAAMAAAABgAAAAAAAAAMAP//BgAAAAAAAAAMAP7/BgAAAAAAAAASAP7/BgAAAAAAAAASAP//BgAAAAAAAAASAAAABgAAAAAAAAASAAEABgAAAAAAAAASAAIABgAAAAAAAAARAAIABgAAAAAAAAARAAMABgAAAAAAAAASAAMABgAAAAAAAAARAAQABgAAAAAAAAAQAAQABgAAAAAAAAAQAAUABgAAAAAAAAAPAAUABgAAAAAAAAAPAAYABgAAAAAAAAAOAAYABgAAAAAAAAAOAAcABgAAAAAAAAANAAcABgAAAAAAAAAJAAcABgAAAAAAAAAJAAYABgAAAAAAAAAKAAMABgAAAAAAAAAKAAIABgAAAAAAAAAKAAEABgAAAAAAAAANAAAABgAAAAAAAAAOAAAABgAAAAAAAAAOAP//BgAAAAAAAAAOAP7/BgAAAAAAAAANAP7/BgAAAAAAAAANAP//BgAAAAAAAAAPAP7/BgAAAAAAAAAQAP7/BgAAAAAAAAARAP7/BgAAAAAAAAARAP//BgAAAAAAAAARAAAABgAAAAAAAAARAAEABgAAAAAAAAAQAAAABgAAAAAAAAAQAP//BgAAAAAAAAAPAP//BgAAAAAAAAAPAAAABgAAAAAAAAAPAAEABgAAAAAAAAAPAAIABgAAAAAAAAAPAAMABgAAAAAAAAAQAAMABgAAAAAAAAAQAAIABgAAAAAAAAAQAAEABgAAAAAAAAAOAAEABgAAAAAAAAANAAEABgAAAAAAAAAMAAEABgAAAAAAAAALAAEABgAAAAAAAAALAAIABgAAAAAAAAALAAMABgAAAAAAAAALAAQABgAAAAAAAAAKAAQABgAAAAAAAAAKAAUABgAAAAAAAAAKAAYABgAAAAAAAAAKAAcABgAAAAAAAAALAAcABgAAAAAAAAALAAYABgAAAAAAAAALAAUABgAAAAAAAAAMAAUABgAAAAAAAAAMAAYABgAAAAAAAAAMAAcABgAAAAAAAAANAAYABgAAAAAAAAANAAUABgAAAAAAAAANAAQABgAAAAAAAAANAAMABgAAAAAAAAANAAIABgAAAAAAAAAOAAIABgAAAAAAAAAOAAMABgAAAAAAAAAOAAQABgAAAAAAAAAOAAUABgAAAAAAAAAPAAQABgAAAAAAAAAMAAIABgAAAAAAAAAMAAMABgAAAAAAAAAMAAQABgAAAAAAAAAPAAcABgAAAAAAAAAQAAcABgAAAAAAAAAQAAYABgAAAAAAAAARAAYABgAAAAAAAAARAAUABgAAAAAAAAASAAQABgAAAAAAAAASAAUABgAAAAAAAAASAAYABgAAAAAAAAASAAcABgAAAAAAAAARAAcABgAAAAAAAAA=")
tile_set = ExtResource("2_k6jq0")

[node name="Tiles" type="Node2D" parent="."]
position = Vector2(-31, -128)

[node name="Ventanas" type="Node2D" parent="Tiles"]

[node name="World_tile4" parent="Tiles/Ventanas" instance=ExtResource("3_s8dlv")]
position = Vector2(749, 278)
scale = Vector2(0.6, 0.6)

[node name="Sprite2D" parent="Tiles/Ventanas/World_tile4" index="0"]
texture = ExtResource("4_tyrku")

[node name="World_tile2" parent="Tiles/Ventanas" instance=ExtResource("3_s8dlv")]
position = Vector2(446, 219)
scale = Vector2(0.6, 0.6)

[node name="Sprite2D" parent="Tiles/Ventanas/World_tile2" index="0"]
texture = ExtResource("4_tyrku")

[node name="World_tile3" parent="Tiles/Ventanas" instance=ExtResource("3_s8dlv")]
position = Vector2(582, 220)
scale = Vector2(-0.6, 0.6)

[node name="Sprite2D" parent="Tiles/Ventanas/World_tile3" index="0"]
texture = ExtResource("4_tyrku")

[node name="World_tile5" parent="Tiles/Ventanas" instance=ExtResource("3_s8dlv")]
position = Vector2(682, 279)
scale = Vector2(-0.6, 0.6)

[node name="Sprite2D" parent="Tiles/Ventanas/World_tile5" index="0"]
texture = ExtResource("4_tyrku")

[node name="World_tile" parent="Tiles/Ventanas" instance=ExtResource("3_s8dlv")]
position = Vector2(239, 336)
scale = Vector2(0.6, 0.6)

[node name="Sprite2D" parent="Tiles/Ventanas/World_tile" index="0"]
texture = ExtResource("4_tyrku")

[node name="World_tile6" parent="Tiles/Ventanas" instance=ExtResource("3_s8dlv")]
position = Vector2(137, 397)
scale = Vector2(0.6, 0.6)

[node name="Sprite2D" parent="Tiles/Ventanas/World_tile6" index="0"]
texture = ExtResource("4_tyrku")

[node name="Paredes" type="Node2D" parent="Tiles"]

[node name="World_tile2" parent="Tiles/Paredes" instance=ExtResource("3_s8dlv")]
position = Vector2(885, 277)
scale = Vector2(-0.6, 0.6)

[node name="Sprite2D" parent="Tiles/Paredes/World_tile2" index="0"]
texture = ExtResource("5_5xp22")

[node name="World_tile3" parent="Tiles/Paredes" instance=ExtResource("3_s8dlv")]
position = Vector2(989, 340)
scale = Vector2(-0.6, 0.6)

[node name="Sprite2D" parent="Tiles/Paredes/World_tile3" index="0"]
texture = ExtResource("5_5xp22")

[node name="World_tile4" parent="Tiles/Paredes" instance=ExtResource("3_s8dlv")]
position = Vector2(1092, 402)
scale = Vector2(-0.6, 0.6)

[node name="Sprite2D" parent="Tiles/Paredes/World_tile4" index="0"]
texture = ExtResource("5_5xp22")

[node name="Extras" type="Node2D" parent="Tiles"]

[node name="World_tile" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
position = Vector2(977, 380)

[node name="Sprite2D" parent="Tiles/Extras/World_tile" index="0"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_0vsm1")

[node name="World_tile3" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
position = Vector2(248, 428)
scale = Vector2(0.5, 0.5)

[node name="Sprite2D" parent="Tiles/Extras/World_tile3" index="0"]
scale = Vector2(-0.6, 0.6)
texture = ExtResource("8_mjtuy")

[node name="World_tile5" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
z_index = 1
position = Vector2(508, 253)

[node name="Sprite2D" parent="Tiles/Extras/World_tile5" index="0"]
scale = Vector2(-0.6, 0.6)
texture = ExtResource("9_cuuv1")

[node name="World_tile6" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
z_index = 1
position = Vector2(873, 349)

[node name="Sprite2D" parent="Tiles/Extras/World_tile6" index="0"]
scale = Vector2(-0.6, 0.6)
texture = ExtResource("9_cuuv1")

[node name="World_tile12" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
z_index = 1
position = Vector2(1090, 466)

[node name="Sprite2D" parent="Tiles/Extras/World_tile12" index="0"]
scale = Vector2(-0.6, 0.6)
texture = ExtResource("9_cuuv1")

[node name="World_tile7" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
z_index = 1
position = Vector2(768, 615)

[node name="Sprite2D" parent="Tiles/Extras/World_tile7" index="0"]
scale = Vector2(-0.6, 0.6)
texture = ExtResource("9_cuuv1")

[node name="World_tile9" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
z_index = 1
position = Vector2(646, 437)

[node name="Sprite2D" parent="Tiles/Extras/World_tile9" index="0"]
z_index = -1
scale = Vector2(-0.6, 0.6)
texture = ExtResource("10_yl1pv")

[node name="World_tile10" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
z_index = 1
position = Vector2(575, 324)

[node name="Sprite2D" parent="Tiles/Extras/World_tile10" index="0"]
scale = Vector2(-0.6, 0.6)
texture = ExtResource("11_mjtuy")

[node name="World_tile8" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
z_index = 1
position = Vector2(684, 352)

[node name="Sprite2D" parent="Tiles/Extras/World_tile8" index="0"]
scale = Vector2(-0.6, 0.6)
texture = ExtResource("9_cuuv1")

[node name="World_tile11" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
z_index = 1
position = Vector2(332, 580)

[node name="Sprite2D" parent="Tiles/Extras/World_tile11" index="0"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("12_cuuv1")

[node name="World_tile13" parent="Tiles/Extras" instance=ExtResource("3_s8dlv")]
z_index = 1
position = Vector2(556, 578)

[node name="Sprite2D" parent="Tiles/Extras/World_tile13" index="0"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_cuuv1")
flip_h = true
hframes = 8
vframes = 5
frame = 20

[node name="Puerta" parent="." instance=ExtResource("3_io27d")]
position = Vector2(355, 154)
scene = "res://Scenes/city.tscn"
point_map = 0.2

[node name="Sprite2D" parent="Puerta" index="0"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_tyrku")

[node name="CollisionShape2D" parent="Puerta/Area2D" index="0"]
position = Vector2(-22, 7)
scale = Vector2(6, 8)

[node name="Item" parent="." instance=ExtResource("4_fdj0q")]
position = Vector2(757, 176)
point_map = 1.0

[node name="Sprite2D" parent="Item" index="0"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_m13ki")

[node name="CollisionShape2D" parent="Item/Area2D" index="0"]
position = Vector2(0.75, 46)

[node name="Item2" parent="." instance=ExtResource("4_fdj0q")]
position = Vector2(1019, 293)
point_map = 0.84

[node name="Sprite2D" parent="Item2" index="0"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_0vsm1")

[node name="CollisionShape2D" parent="Item2/Area2D" index="0"]
position = Vector2(-19, -4)
scale = Vector2(6, 8)

[node name="Item3" parent="." instance=ExtResource("4_fdj0q")]
position = Vector2(604, 447)
point_map = 0.5

[node name="Sprite2D" parent="Item3" index="0"]
scale = Vector2(-0.643931, 0.643931)
texture = ExtResource("7_3568l")

[node name="CollisionShape2D" parent="Item3/Area2D" index="0"]
position = Vector2(0, -2)
scale = Vector2(10, 8)

[node name="Item4" parent="." instance=ExtResource("4_fdj0q")]
position = Vector2(143, 342)

[node name="Sprite2D" parent="Item4" index="0"]
scale = Vector2(-0.300432, 0.300432)
texture = ExtResource("8_mjtuy")

[node name="CollisionShape2D" parent="Item4/Area2D" index="0"]
position = Vector2(0, -2)
scale = Vector2(6, 5)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-45, 0)
curve = SubResource("Curve2D_2shtd")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(665.326, 386.019)
progress = 459.343
rotates = false

[node name="Character" parent="Path2D/PathFollow2D" instance=ExtResource("18_cuuv1")]
position = Vector2(3, -47)
scale = Vector2(0.5, 0.5)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamMP3_fdj0q")

[node name="Mensajeloop" parent="." instance=ExtResource("19_yl1pv")]

[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]

[editable path="Tiles/Ventanas/World_tile4"]
[editable path="Tiles/Ventanas/World_tile2"]
[editable path="Tiles/Ventanas/World_tile3"]
[editable path="Tiles/Ventanas/World_tile5"]
[editable path="Tiles/Ventanas/World_tile"]
[editable path="Tiles/Ventanas/World_tile6"]
[editable path="Tiles/Paredes/World_tile2"]
[editable path="Tiles/Paredes/World_tile3"]
[editable path="Tiles/Paredes/World_tile4"]
[editable path="Tiles/Extras/World_tile"]
[editable path="Tiles/Extras/World_tile3"]
[editable path="Tiles/Extras/World_tile5"]
[editable path="Tiles/Extras/World_tile6"]
[editable path="Tiles/Extras/World_tile12"]
[editable path="Tiles/Extras/World_tile7"]
[editable path="Tiles/Extras/World_tile9"]
[editable path="Tiles/Extras/World_tile10"]
[editable path="Tiles/Extras/World_tile8"]
[editable path="Tiles/Extras/World_tile11"]
[editable path="Tiles/Extras/World_tile13"]
[editable path="Puerta"]
[editable path="Item"]
[editable path="Item2"]
[editable path="Item3"]
[editable path="Item4"]
